[package]
name = "ros2msg_to_rs"
version = "0.1.0"
edition = "2021"
author = "Yuuki Takano <yuuki.takano@tier4.jp>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
walkdir = "2.3.2"
convert_case = "0.5.0"
clap = { version = "3.1.18", features = ["derive"] }
