[package]
name = "ros2msg_to_rs"
version = "0.2.3"
edition = "2021"
authors = ["Yuuki Takano <yuuki.takano@tier4.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
walkdir = "2.3"
convert_case = "0.6"
clap = { version = "4.1", features = ["derive"] }
